quiz-2/backend_deployment_service_hpa.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutri-be
  namespace: pnt-quiz
  labels:
    app: nutri-be
spec:
  selector:
    matchLabels:
      app: nutri-be
      tier: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nutri-be
        tier: backend
    spec:
      containers:
        - name: nutri-be
          image: 0xsera/nutri-be:v0.0
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 8080
          resources:
            requests:
              memory: 150Mi
              cpu: 150m
            limits:
              memory: 300Mi
              cpu: 300m
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 1

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutri-be
  labels:
    app: nutri-be
spec:
  selector:
    app: nutri-be
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
