quiz-2/frontend_deployment_service_hpa.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutri-fe
  namespace: pnt-quiz
  labels:
    app: nutri-fe
spec:
  selector:
    matchLabels:
      app: nutri-fe
      tier: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nutri-fe
        tier: frontend
    spec:
      containers:
        - name: nutri-fe
          image: 0xsera/nutri-fe:v0.0
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 80
          resources:
            requests:
              memory: 150Mi
              cpu: 150m
            limits:
              memory: 300Mi
              cpu: 300m
          readinessProbe:
            httpGet:
              path: /
              port: 80
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 1

---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutri-fe
  labels:
    app: nutri-fe
spec:
  selector:
    app: nutri-fe
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
