quiz-2/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutri-ingress
  namespace: pnt-quiz
  labels:
    app: nutri-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: nutri.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nutri-fe
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nutri-be
            port:
              number: 8080
